feat(runners): do not create reg token for new unregistered runner
